--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
   <h1>¡Buenos días!</h1>
-  <h2>IDAT</h2>
+  <h2>IDAT - Juan Carlos Camayo</h2>
+  <img src="img\foto.jpg" />
 </body>
 </html>
