--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
 <head>
   <title>Mi primera web</title>
@@ -5,6 +6,6 @@
 <body>
   <h1>¡Buenos días!</h1>
   <h2>IDAT - Juan Carlos Camayo</h2>
-  <img src="img/foto.jpg" />
+  <img src="img/foto.jpg" alt="Florencia" />
 </body>
 </html>
