--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <body>
   <h1>¡Buenos días!</h1>
   <h2>IDAT - Juan Carlos Camayo</h2>
+  <h1>hola</h1>
   <img src="img\foto.jpg" />
 </body>
 </html>
